--- a/Meeting_Management/Views/Task/Index.cshtml
+++ b/Meeting_Management/Views/Task/Index.cshtml
@@ -7,7 +7,10 @@
     <form>
         <div class="card mt-4">
             <div class="card-header">
-                <h4 class="card-title">Meeting Miniutes</h4>
+                <div class="row">
+                    <h5 class="card-subtitle col-6">Meeting Miniutes</h5>
+                    <a class="d-flex justify-content-end col-6" style="text-decoration: none; color: black;"><i class="fa fa-edit"></i></a>
+                </div>
             </div>
             <div class="card-body">
                 <div class="row">
@@ -33,26 +36,28 @@
                             <div class="col-sm-8">
                                 <select class="form-select form-select-sm">
                                     <option selected>Select customer name</option>
-                                    <option value="1">One</option>
-                                    <option value="2">Two</option>
-                                    <option value="3">Three</option>
+                                    @foreach (var n in ViewBag.Names)
+                                    {
+                                        <option value="@n">@n</option>
+
+                                    }
                                 </select>
                             </div>
                         </div>
                         <div class="mb-3 row">
                             <label for="exampleFormControlTextarea1" class="col-form-label col-sm-4">Date</label>
                             <div class="col-sm-3">
-                                <input type="date" class="form-control" id="exampleFormControlTextarea1" rows="3"></input>
+                                <input type="date" class="form-control" id="exampleFormControlTextarea1" rows="3"/>
                             </div>
                             <label for="exampleFormControlTextarea1" class="col-form-label col-sm-2">Time</label>
                             <div class="col-sm-3">
-                                <input type="time" class="form-control" id="exampleFormControlTextarea1" rows="3"></input>
+                                <input type="time" class="form-control" id="exampleFormControlTextarea1" rows="3"/>
                             </div>
                         </div>
                         <div class="mb-3 row">
                             <label for="exampleFormControlTextarea1" class="col-form-label col-sm-4">Meating Place</label>
                             <div class="col-sm-8">
-                                <input type="text" class="form-control" id="exampleFormControlTextarea1" rows="3"></input>
+                                <input type="text" class="form-control" id="exampleFormControlTextarea1" rows="3"/>
                             </div>
                         </div>
                         <div class="mb-3 row">
@@ -120,7 +125,7 @@
                         </div>
                     </div>
                 </div>
-                <button type="" class="btn btn-sm"><i class="fa fa-plus"></i> Add</button>
+                <button class="btn btn-sm"><i class="fa fa-plus"></i> Add</button>
             </div>
         </div>
 
