--- a/Meeting_Management/Views/Task/_Details.cshtml
+++ b/Meeting_Management/Views/Task/_Details.cshtml
@@ -8,20 +8,24 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="mb-3 row">
-                    <label for="exampleFormControlInput1" class="col-form-label col-sm-4">Interestd Product/Service</label>
+                    <label for="Products_Service_Name" class="col-form-label col-sm-4">Interestd Product/Service</label>
                     <div class="col-sm-8">
-                        @Html.DropDownListFor(x => x.Products_Service_Name, new SelectList(ViewBag.ProductNames), "Select product/service interested", new { @class = "form-select form-select-sm", @onchange = "onProductChange()" })
+                        @Html.DropDownListFor(x => x.Products_Service_Name, new SelectList(ViewBag.ProductNames), "Select product/service interested", new { @class = "form-select form-select-sm", @onchange = "save()" })
+                        @*@Html.DropDownListFor(x => x.Products_Service_Name, new SelectList(ViewBag.ProductNames), "Select product/service interested", new { @class = "form-select form-select-sm", id = "Products_Service_Name" })*@
                     </div>
                 </div>
                 <div class="mb-3 row">
-                    <label for="exampleFormControlTextarea1" class="col-form-label col-sm-4">Quantity</label>
+                    <label for="Quantity" class="col-form-label col-sm-4">Quantity</label>
                     <div class="col-sm-3">
-                        @Html.TextBoxFor(x => x.Quantity, new { @class = "form-control", type = "text" })
+                        @Html.TextBoxFor(x => x.Quantity, new { @class = "form-control", type = "text", placeholder = "Enter Quantity" })
                     </div>
 
-                    <label for="exampleFormControlTextarea1" class="col-form-label col-sm-2">Unit</label>
+                    <label for="Unit" class="col-form-label col-sm-2">Unit @ViewBag.Unit</label>
                     <div class="col-sm-3">
-                        @Html.TextBoxFor(x => x.Unit, new { @class = "form-control", type = "text" })
+                        @Html.TextBoxFor(x => x.Unit, new { @class = "form-control", type = "text", @readonly = "readonly", id = "Unit", placeholder = @ViewBag.Unit })
+                        @Html.HiddenFor(x => x.Unit)
+
+                        @*@Html.TextBoxFor(x => x.Unit, new { @class = "form-control readonly", type = "text", value = "@ViewBag.Unit" })*@
                     </div>
                 </div>
             </div>
@@ -56,21 +60,48 @@
     </div>
 </div>
 
+@*<script>
+            function onProductChange() {
+                console.log("It's work!!");
+                var selectedProduct = $("#Products_Service_Name").val(); // Get the selected value from the dropdown
+                console.log(selectedProduct);
+
+
+                //$.ajax({
+                //    type: 'POST',
+                //    url: '/Controller/OnProductChange', // Replace with your controller and method
+                //    data: { selectedProduct: selectedProduct },
+                //    success: function (response) {
+                //        console.log(response);
+                //    },
+                //    error: function (error) {
+                //        console.error(error);
+                //    }
+                //});
+            }
+    </script>*@
+
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script>
-    function onProductChange() {
+    function save() {
         console.log("It's work!!");
         var selectedProduct = $("#Products_Service_Name").val(); // Get the selected value from the dropdown
         console.log(selectedProduct);
+
+        // Make an AJAX request to the server-side C# method
         $.ajax({
-            type: 'GET',
-            url: '/Controller/OnProductChange', // Replace with your controller and method
+            type: "POST",
+            url: "/YourController/save", // Replace with the actual endpoint
             data: { selectedProduct: selectedProduct },
             success: function (response) {
+                // Handle the response from the server if needed
                 console.log(response);
             },
             error: function (error) {
+                // Handle errors if the request fails
                 console.error(error);
             }
         });
     }
 </script>
+
